--- a/_pages/A320.md
+++ b/_pages/A320.md
@@ -9,3 +9,7 @@ defaults:
       layout: single
       author_profile: true
 ---
+
+{% include figure image_path="https://storage.googleapis.com/media.darkwire.com/IMG_3107.JPG" alt="Pair of finished A320 models" caption="Finished A320 models on 3d-printed stands" %}
+
+{% include figure image_path="https://media.darkwire.com/IMG_3107.JPG" alt="Pair of finished A320 models" caption="Finished A320 models on 3d-printed stands" %}
