image resize test

--- a/_pages/A320.md
+++ b/_pages/A320.md
@@ -10,6 +10,6 @@ defaults:
       author_profile: true
 ---
 
-{% include figure image_path="https://storage.googleapis.com/media.darkwire.com/IMG_3107.JPG" alt="Pair of finished A320 models" caption="Finished A320 models on 3d-printed stands" %}
+<img src="https://media.darkwire.com/IMG_3107.JPG" width="400">
 
 {% include figure image_path="https://media.darkwire.com/IMG_3107.JPG" alt="Pair of finished A320 models" caption="Finished A320 models on 3d-printed stands" %}
