embed html for page layout

--- a/_pages/A320.md
+++ b/_pages/A320.md
@@ -10,5 +10,7 @@ defaults:
       author_profile: true
 ---
 
-<img src="https://media.darkwire.com/IMG_3107.JPG" width="400">
-
+<div>
+	<img src="https://media.darkwire.com/IMG_3107.JPG" width="400" style="float: right;">
+	Completed A320 models on 3D-printed stands.
+</div>
