using image tags in markdown

--- a/_pages/A320.md
+++ b/_pages/A320.md
@@ -10,7 +10,12 @@ defaults:
       author_profile: true
 ---
 
-<div>
+![image-center](https://media.darkwire.com/IMG_3107.JPG){: .align-center}
+Filler A
+![image-left](https://media.darkwire.com/IMG_3107.JPG){: .align-left}
+FillerB
+
+<!--<div>
 	<img src="https://media.darkwire.com/IMG_3107.JPG" width="400" style="float: right;">
 	Completed A320 models on 3D-printed stands.
-</div>
+</div>-->
