--- a/_pages/A320.md
+++ b/_pages/A320.md
@@ -12,7 +12,7 @@ defaults:
 
 ![image-center](https://media.darkwire.com/IMG_3107.JPG){: .align-center}
 Filler A
-![image-left](https://media.darkwire.com/IMG_3107.JPG){: .align-left}
+![image-left](https://media.darkwire.com/IMG_6372.JPG =250x){: .align-left}
 FillerB
 
 <!--<div>
