max image width

--- a/_pages/A320.md
+++ b/_pages/A320.md
@@ -10,11 +10,11 @@ defaults:
       author_profile: true
 ---
 
-![image-center](https://media.darkwire.com/IMG_3107.JPG){: .align-center}
+![image-center](https://media.darkwire.com/IMG_3107.JPG){: .align-center width="500px"}
 
 Filler A
 
-![image-left](https://media.darkwire.com/IMG_6372.JPG){: .align-left width="200px"}
+![image-left](https://media.darkwire.com/IMG_6372.JPG){: .align-left width="300px"}
 
 FillerB
 
