--- a/_pages/A320.md
+++ b/_pages/A320.md
@@ -7,14 +7,16 @@ defaults:
       type: pages
     values:
       layout: single
-      author_profile: true
+      title: A320
+      author_profile: false
 ---
 
-![image-center](https://media.darkwire.com/IMG_3107.JPG){: .align-center width="500px"}
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sollicitudin ac orci phasellus egestas. Elementum curabitur vitae nunc sed velit dignissim sodales ut eu. Mattis molestie a iaculis at erat pellentesque adipiscing commodo elit. Dui nunc mattis enim ut tellus elementum sagittis vitae. Ut eu sem integer vitae justo eget. Duis at tellus at urna. Aenean vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant morbi. 
 
-![image-left](https://media.darkwire.com/IMG_6372.JPG){: .align-left width="300px"}
+![image-center](https://media.darkwire.com/IMG_3107.JPG){: .align-center width="500px"}
+
+![image-left](https://media.darkwire.com/IMG_6372.JPG){: .align-center width="300px"}
 
 Odio ut enim blandit volutpat maecenas. Enim nulla aliquet porttitor lacus luctus accumsan. Scelerisque felis imperdiet proin fermentum. Sed odio morbi quis commodo. Volutpat lacus laoreet non curabitur gravida arcu ac. Etiam non quam lacus suspendisse faucibus interdum. Ac tortor dignissim convallis aenean et tortor at risus viverra.
 
