added actual A320 text and images

--- a/_pages/A320.md
+++ b/_pages/A320.md
@@ -3,13 +3,16 @@ permalink: /projects/A320/
 layout: single
 ---
 
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sollicitudin ac orci phasellus egestas. Elementum curabitur vitae nunc sed velit dignissim sodales ut eu. Mattis molestie a iaculis at erat pellentesque adipiscing commodo elit. Dui nunc mattis enim ut tellus elementum sagittis vitae. Ut eu sem integer vitae justo eget. Duis at tellus at urna. Aenean vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant morbi. 
-
-
 [![alt text](https://media.darkwire.com/IMG_3107.JPG){: .align-center width="650px"}](https://media.darkwire.com/IMG_3107.JPG)
 
-[![image-left](https://media.darkwire.com/IMG_6372.JPG){: .align-center width="650px"}](https://media.darkwire.com/IMG_6372.JPG)
+The finished models on 3D-printed display stands.
 
-Odio ut enim blandit volutpat maecenas. Enim nulla aliquet porttitor lacus luctus accumsan. Scelerisque felis imperdiet proin fermentum. Sed odio morbi quis commodo. Volutpat lacus laoreet non curabitur gravida arcu ac. Etiam non quam lacus suspendisse faucibus interdum. Ac tortor dignissim convallis aenean et tortor at risus viverra.
 
+[![image-left](https://media.darkwire.com/IMG_3074.JPG){: .align-center width="650px"}](https://media.darkwire.com/IMG_3074.JPG)
+
+This is the custom circuit board, fully populated and ready to be installed inside the fuselage. I could have saved space by using surface mount parts but the overall footprint for the resistors wasn't that different when mounting them vertically. The main IC is an ATTiny84.
+
+
+[![image-left](https://media.darkwire.com/IMG_3075.JPG){: .align-center width="650px"}](https://media.darkwire.com/IMG_3075.JPG)
+
+A better shot of the model, circuit board, and fuselage insert assembly. The IR receiver is visible on the far right.
