--- a/_pages/A320.md
+++ b/_pages/A320.md
@@ -16,3 +16,8 @@ This is the custom circuit board, fully populated and ready to be installed insi
 [![image-left](https://media.darkwire.com/IMG_3075.JPG){: .align-center width="650px"}](https://media.darkwire.com/IMG_3075.JPG)
 
 A better shot of the model, circuit board, and fuselage insert assembly. The IR receiver is visible on the far right.
+
+
+[![image-left](https://media.darkwire.com/IMG_2536.JPG){: .align-center width="650px"}](https://media.darkwire.com/IMG_2536.JPG)
+
+Installing the top strobe LED. The hole needs to be filed down to accommodate the shape of the solder blob and wires.
