--- a/_pages/A320.md
+++ b/_pages/A320.md
@@ -3,6 +3,8 @@ permalink: /projects/A320/
 layout: single
 ---
 
+[![alt text](https://media.darkwire.com/a320_loop_640.gif){: .align-center width="650px"}](https://media.darkwire.com/a320_loop_640.gif)
+
 [![alt text](https://media.darkwire.com/IMG_3107.JPG){: .align-center width="650px"}](https://media.darkwire.com/IMG_3107.JPG)
 
 The finished models on 3D-printed display stands.
