--- a/_pages/A320.md
+++ b/_pages/A320.md
@@ -3,7 +3,7 @@ permalink: /projects/A320/
 layout: single
 ---
 
-[![alt text](https://storage.googleapis.com/media.darkwire.com/a320_1440b.mp4){: .align-center width="650px"}](https://storage.googleapis.com/media.darkwire.com/a320_1440b.mp4)
+<video src="https://media.darkwire.com/a320_1440b.mp4" width="640" autoplay loop></video>
 
 [![alt text](https://media.darkwire.com/IMG_3107.JPG){: .align-center width="650px"}](https://media.darkwire.com/IMG_3107.JPG)
 
