--- a/_pages/A320.md
+++ b/_pages/A320.md
@@ -1,6 +1,7 @@
 ---
 permalink: /projects/A320
 layout: single
+title: "Lighted A320 Models"
 ---
 
 <video src="https://media.darkwire.com/a320_1440b.mp4" width="640" autoplay loop></video>
